--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
       <div class="destination-card">
         <h3>Kyoto, Japan</h3>
-        <p>Explore tranquil temples, cherry blossoms, and traditional tea ceremonies.</p>
+        <p>Explore tranquil temples and traditional tea ceremonies.</p>
       </div>
     </section>
 
